# SongSeongHun-20260528

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: config.js  format-action.js  main.jsx  styles.css
client/src/components/: AuthPanel.jsx  ChatPanel.jsx  MessageList.jsx  Sidebar.jsx
deploy/: nginx.conf
docs/: 01_Product_Strategy.md  02_RAG_Architecture.md  02_RAG_Architecture.md.md  03_Data_Pipeline.md  04_API_Spec.md  05_Deployment.md  06_Runbook.md
pipeline/: README.md  pyproject.toml
pipeline/src/levit_pipeline/: __init__.py  chunker.py  cli.py  crawler.py  mysql.py  normalizer.py  writer.py
pipeline/tests/: test_pipeline_mvp.py
server/: Dockerfile  package-lock.json  package.json
server/scripts/: migrate.js  seed-products.js
server/src/: app.js  index.js
server/src/application/chat/: ChatService.js
server/src/domain/chat/: ChatSession.js
server/src/domain/onboarding/: onboarding.extraction-normalizer.js  onboarding.keyword-dictionaries.js  onboarding.parser.js  onboarding.questions.js
server/src/domain/rag/: rag.context.js  (+3 more)
server/test/: auth-middleware.test.js  auth-service.test.js  chat-service.test.js  chat-turn-workflow.test.js  chat.test.js  create-default-rag-workflow.test.js  db-migration.test.js  domain-entities.test.js  llm-models.test.js  onboarding-service.test.js  rag-workflow.test.js  repositories.test.js  seed-sample-products.test.js
server/test/app/: chat.test.js
server/test/domain/: domain-entities.test.js
(+58 files in other folders)
